--- a/BankSystem/src/Infrastructure/Helpers/Helpers.Commons/Helpers.Commons.csproj
+++ b/BankSystem/src/Infrastructure/Helpers/Helpers.Commons/Helpers.Commons.csproj
@@ -26,4 +26,7 @@
         <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="$(OpenTelemetryInstrumentationAspNetCore)" />
         <PackageReference Include="WindowsAzure.Storage" Version="$(WindowsAzureStorage)" />
     </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\Domain\Domain.Model\Domain.Model.csproj" />
+    </ItemGroup>
 </Project>
