Feat: Added User basic testing operations

--- a/BankSystem/Tests/Domain/Domain.UseCase.Tests/Domain.UseCase.Tests.csproj
+++ b/BankSystem/Tests/Domain/Domain.UseCase.Tests/Domain.UseCase.Tests.csproj
@@ -7,13 +7,20 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Moq" Version="$(Moq)"/>
-        <PackageReference Include="xunit" Version="$(XUnitPackageVersion)"/>
+        <PackageReference Include="Moq" Version="$(Moq)" />
+        <PackageReference Include="xunit" Version="$(XUnitPackageVersion)" />
         <PackageReference Include="xunit.runner.visualstudio" Version="$(XUnitRunnerVisualstudio)">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNETTestSdkPackageVersion)"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNETTestSdkPackageVersion)" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\src\Domain\Domain.Model\Domain.Model.csproj" />
+      <ProjectReference Include="..\..\..\src\Domain\Domain.UseCase\Domain.UseCase.csproj" />
+      <ProjectReference Include="..\..\Infrastructure\Helpers.ObjectsUtils.Tests\Helpers.ObjectsUtils.Tests.csproj" />
+      <ProjectReference Include="..\Domain.Model.Tests\Domain.Model.Tests.csproj" />
     </ItemGroup>
 
 </Project>
