--- a/BankSystem/Tests/Infrastructure/DrivenAdapters/DrivenAdapters.Mongo.Tests/DrivenAdapters.Mongo.Tests.csproj
+++ b/BankSystem/Tests/Infrastructure/DrivenAdapters/DrivenAdapters.Mongo.Tests/DrivenAdapters.Mongo.Tests.csproj
@@ -7,13 +7,21 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Moq" Version="$(Moq)"/>
-        <PackageReference Include="xunit" Version="$(XUnitPackageVersion)"/>
+        <PackageReference Include="MongoDB.Driver" Version="2.14.1" />
+        <PackageReference Include="Moq" Version="$(Moq)" />
+        <PackageReference Include="xunit" Version="$(XUnitPackageVersion)" />
         <PackageReference Include="xunit.runner.visualstudio" Version="$(XUnitRunnerVisualstudio)">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNETTestSdkPackageVersion)"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNETTestSdkPackageVersion)" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\..\src\Infrastructure\DrivenAdapters\DrivenAdapters.Mongo\DrivenAdapters.Mongo.csproj" />
+      <ProjectReference Include="..\..\..\Domain\Domain.Model.Tests\Domain.Model.Tests.csproj" />
+      <ProjectReference Include="..\..\Helpers.ObjectsUtils.Tests\Helpers.ObjectsUtils.Tests.csproj" />
+      <ProjectReference Include="..\DrivenAdapter.Files.Test\DrivenAdapter.Files.Tests.csproj" />
     </ItemGroup>
 
 </Project>
