--- a/BankSystem/Tests/Infrastructure/Helpers.ObjectsUtils.Tests/Helpers.ObjectsUtils.Tests.csproj
+++ b/BankSystem/Tests/Infrastructure/Helpers.ObjectsUtils.Tests/Helpers.ObjectsUtils.Tests.csproj
@@ -7,17 +7,18 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Folder Include="DataBuilder\"/>
-    </ItemGroup>
-
-    <ItemGroup>
-        <PackageReference Include="Moq" Version="$(Moq)"/>
-        <PackageReference Include="xunit" Version="$(XUnitPackageVersion)"/>
+        <PackageReference Include="Moq" Version="$(Moq)" />
+        <PackageReference Include="xunit" Version="$(XUnitPackageVersion)" />
         <PackageReference Include="xunit.runner.visualstudio" Version="$(XUnitRunnerVisualstudio)">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNETTestSdkPackageVersion)"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNETTestSdkPackageVersion)" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\src\Domain\Domain.Model\Domain.Model.csproj" />
+      <ProjectReference Include="..\..\Domain\Domain.Model.Tests\Domain.Model.Tests.csproj" />
     </ItemGroup>
 
 </Project>
