--- a/BankSystem/Tests/Infrastructure/EntryPoints/EntryPoints.ReactWeb.Tests/EntryPoints.ReactWeb.Tests.csproj
+++ b/BankSystem/Tests/Infrastructure/EntryPoints/EntryPoints.ReactWeb.Tests/EntryPoints.ReactWeb.Tests.csproj
@@ -16,4 +16,10 @@
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNETTestSdkPackageVersion)" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\..\src\Domain\Domain.UseCase\Domain.UseCase.csproj" />
+      <ProjectReference Include="..\..\..\..\src\Infrastructure\EntryPoints\EntryPoints.ReactiveWeb\EntryPoints.ReactiveWeb.csproj" />
+      <ProjectReference Include="..\..\Helpers.ObjectsUtils.Tests\Helpers.ObjectsUtils.Tests.csproj" />
+    </ItemGroup>
+
 </Project>
