Feat: Added Credit GRPC protocol

--- a/BankSystem/src/Applications/BankSystem.AppServices/appsettings.json
+++ b/BankSystem/src/Applications/BankSystem.AppServices/appsettings.json
@@ -6,6 +6,15 @@
     "Database": "BankSystem",
     "HealthChecksEndPoint": "/health"
   },
+  "Kestrel": {
+    "Endpoints": {
+      "http": { "Url": "http://localhost:5000/" },
+      "gRPC": {
+        "Protocols": "Http2",
+        "Url": "http://localhost:5001/"
+      }
+    }
+  },
   "Secrets": {
     "RedisConnection": "",
     "StorageConnection": ""
